[package]
name = "backend_vr_shahe"
version = "0.1.0"
authors = ["zekin <wzekin@gmailc.om>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
lazy_static = "1.3"
pretty_env_logger = "0.3"
hyper= {git = "https://github.com/hyperium/hyper"}
futures-util-preview = { version = "0.3.0-alpha.17"  }
tokio = { git = "https://github.com/tokio-rs/tokio", optional = true, default-features = false, features = ["rt-full"]  }

[features]
default = [
    "runtime",
]
runtime = [
    "tokio",
]
